## Changes in v1.4 ##

Export_GWASpoly can now export posterior mean genotypes.

## Changes in v1.3 ##

Added the ExpectedHindHe, SimGenotypes, and SimAlleleDepth functions.  The
first in particular is intended to help the user to select a Hind/He threshold
for filtering markers.

Added the Export_Structure function.

In the variant calling pipeline, process_isoloci.py has been modified so that
the user can set an expected and maximum Hind/He. The previous functionality,
where these thresholds were calculated automatically from inbreeding, remains
available.

Fixed a bug in VCF2RADdata that would occur if expectedAlleles or expectedLoci
were set too low.  VCF2RADdata now also sets the "Variable_sites_only" attribute
to be FALSE if phaseSNPs = FALSE.

Fixed a bug in SubsetByLocus, MergeRareHaplotypes, and MergeIdenticalHaplotypes
that would delete the "Variable_sites_only" attribute, preventing VCF export.

## Changes in v1.2 ##

The functions HindHe and HindHeMapping have been added, to assist with filtering
loci that are behaving in a non-Mendelian fashion, as well as individuals that
do not behave like the expected ploidy.  The function InbreedingFromHIndHe has
been added to facilitate estimating the inbreeding statistic F from the results
of HindHe.

The Python scripts process_sam_multi.py and process_isoloci.py have been added,
to serve as a pipeline for variant calling in highly duplicated genomes.  These
are described in a new vignette, "Variant and Genotype Calling in Highly
Duplicated Genomes" (isolocus_sorting.Rmd).  The functions readProcessSamMulti
and readProcessIsoloci have been added for import of data from the Python
scripts into polyRAD.

The function RADdata2VCF has been added for export to VCF.

A Python script has been added to help identify full tag sequences for alleles
imported from TASSEL-GBSv2 using VCF2RADdata.

The GetProbableGenotypes function has been updated to optionally recognize