@@ -8,7 +8,8 @@ AddGenotypePriorProb_HWE, AddGenotypePriorProb_LD,
 AddGenotypePriorProb_Mapping2Parents, AddPCA,
 AddPloidyChiSq, AddPloidyLikelihood, AddPriorTimesLikelihood,
 CanDoGetWeightedMeanGeno, EstimateContaminationRate, 
-EstimateParentalGenotypes, ExpectedHindHe, ExportGAPIT, Export_GWASpoly,
+EstimateParentalGenotypes, ExpectedHindHe, Export_adegenet_genind, ExportGAPIT,
+Export_GWASpoly,
 Export_MAPpoly, Export_polymapR, Export_rrBLUP_Amat, Export_rrBLUP_GWAS,
 Export_Structure, Export_TASSEL_Numeric, GetAlleleNames,
 GetBlankTaxa, GetContamRate, GetDonorParent, GetLikelyGen, 
