@@ -7,6 +7,7 @@
 \alias{Export_MAPpoly}
 \alias{Export_GWASpoly}
 \alias{Export_Structure}
+\alias{Export_adegenet_genind}
 \title{
 Export RADdata Object for Use by Other R Packages
 }
@@ -17,8 +18,8 @@ the genotypes to R packages and other software that can
 perform genome-wide association and genomic prediction.  \code{ExportGAPIT},
 \code{Export_rrBLUP_Amat}, \code{Export_rrBLUP_GWAS}, \code{Export_GWASpoly},
 and \code{Export_TASSEL_Numeric} all export continuous numerical genotypes 
-generated by \code{\link{GetWeightedMeanGenotypes}}.  \code{Export_polymapR} 
-and \code{Export_Structure} use 
+generated by \code{\link{GetWeightedMeanGenotypes}}.  \code{Export_polymapR},
+\code{Export_Structure}, and \code{Export_adegenet_genind} use 
 \code{\link{GetProbableGenotypes}} to export discrete 
 genotypes.  \code{Export_MAPpoly} writes genotype posterior probabilities to a
 file for import by \pkg{MAPpoly}.
@@ -43,6 +44,7 @@ Export_MAPpoly(object, file, pheno = NULL, ploidyIndex = 1,
 Export_GWASpoly(object, file, naIfZeroReads = TRUE, postmean = TRUE, digits = 3)
 Export_Structure(object, file, includeDistances = FALSE, extraCols = NULL,
                  missingIfZeroReads = TRUE)
+Export_adegenet_genind(object, ploidyIndex = 1)
 }
 \arguments{
   \item{object}{
@@ -109,8 +111,8 @@ argument for \code{ExportGAPIT}.  Genotypes are exported on a scale of -1
 to 1 for \pkg{rrBLUP}, on a scale of 0 to 2 for \pkg{GAPIT} and \pkg{FarmCPU},
 and on a scale of 0 to 1 for \pkg{TASSEL}.
 
-For all functions except \code{Export_Structure}, one allele per marker is
-dropped.  \code{Export_MAPpoly}
+For all functions except \code{Export_Structure} and \code{Export_adegenet_genind},
+one allele per marker is dropped.  \code{Export_MAPpoly}
 also drops alleles where one or both parental genotypes could not be determined,
 and where both parents are homozygotes.
 
@@ -155,6 +157,8 @@ not return an object.
 For \code{Export_polymapR}, a matrix of integers indicating the most probable 
 allele copy number, with markers in rows and individuals in columns.  The 
 parents are listed first, followed by all progeny.
+
+For \code{Export_adegenet_genind}, a \code{\link[adegenet:genind]{"genind"}} object.
 
 \code{Export_MAPpoly}, \code{Export_GWASpoly}, and \code{Export_Structure}
 write files but do not return
@@ -307,6 +311,11 @@ Export_GWASpoly(exampleRAD, outfile3)
 # export to Structure
 outfile4 <- tempfile() # temporary file for example
 Export_Structure(exampleRAD, outfile4)
+
+# export to adegenet
+if(requireNamespace("adegenet", quiet = TRUE)){
+  mygenind <- Export_adegenet_genind(exampleRAD)
+}
 }
 
 \keyword{ manip }
