@@ -374,6 +374,7 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 <li><code>Export_MAPpoly</code></li>
 <li><code>Export_GWASpoly</code></li>
 <li><code>Export_Structure</code></li>
+<li><code>Export_adegenet_genind</code></li>
 <li><code>RADdata2VCF</code></li>
 </ul>
 <p>If you need continuous numerical genotypes exported in some other format, see <code>GetWeightedMeanGenotypes</code>. If you need discrete numerical genotypes, see <code>GetProbableGenotypes</code>. Also, <code>GetLikelyGen</code> returns the most likely genotypes (based on read depth only) for a single sample.</p>
